<resources>
    <string name="app_name">SToolUi</string>
    <string name="stool_app_name">SmartTool</string>
    <string name="stool_base_info">基本信息</string>
    <string name="stool_cpu_memory">内存</string>
    <string name="stool_electric_info">电量</string>
    <string name="stool_electric_tip_message">即将跳转到应用详情页面，请点击"电池"查看应用相关耗电情况。注意：部分机型不支持该功能 </string>
    <string name="stool_end_time">结束时间：</string>
    <string name="stool_exception">异常</string>
    <string name="stool_exception_del_all">删除所有异常信息</string>
    <string name="stool_exception_info">异常信息</string>
    <string name="stool_network_detail">网络信息详情</string>
    <string name="stool_network_request">网络请求</string>
    <string name="stool_notification_content">点击进入</string>
    <string name="stool_notification_title">SmartTool工具</string>
    <string name="stool_protocol_type">协议类型：</string>
    <string name="stool_request">请求</string>
    <string name="stool_request_type">请求方式：</string>
    <string name="stool_resend">重新发送</string>
    <string name="stool_resend_finish">重新发送完成</string>
    <string name="stool_response">响应</string>
    <string name="stool_response_content_hint_expand">响应内容：</string>
    <string name="stool_response_content_hint_fold">响应内容：已收缩，点击右上方倒三角查看内容</string>
    <string name="stool_start_time">开始时间：</string>
    <string name="stool_txt_agent">agent类型</string>
    <string name="stool_txt_agent_version">agent版本</string>
    <string name="stool_txt_app_name">app名称</string>
    <string name="stool_txt_app_version">app版本</string>
    <string name="stool_txt_device_imei">IMEI</string>
    <string name="stool_txt_device_name">设备名称</string>
    <string name="stool_txt_device_number">设备型号</string>
    <string name="stool_txt_device_os">OS类型</string>
    <string name="stool_txt_device_os_special">定制OS类型</string>
    <string name="stool_ui">UI交互</string>
    <string name="stool_ui_choose_loading_threshold">请选择慢加载阈值  (单位 ms)</string>
    <string name="stool_ui_end_time">结束时间：</string>
    <string name="stool_ui_loading_threshold">慢加载阈值:</string>
    <string name="stool_ui_page">页面名称：</string>
    <string name="stool_ui_start_time">开始时间：</string>
    <string name="stool_ui_time_use">加载用时：</string>
    <string name="stool_url">URL:</string>
    <string name="stool_usage_info">内存使用情况</string>
    <string name="stool_version">Version: 1.0.0 Beta </string>
</resources>
