<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_base_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <include layout="@layout/stool_toolbar_view"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stool_bg_base_info"
            android:layout_margin="@dimen/stool_x10"

            >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/stool_x10"
            android:layout_marginBottom="@dimen/stool_x10"
            >
        <net.people.stoolui.modules.base.BaseInfoItemView
                android:id="@+id/view_base_info_app_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y50"
                app:stool_label_base_info_text="@string/stool_txt_app_name"
            />
        <net.people.stoolui.modules.base.BaseInfoItemView
                android:id="@+id/view_base_info_app_version"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y50"
                app:stool_label_base_info_text="@string/stool_txt_app_version"
            />
        <net.people.stoolui.modules.base.BaseInfoItemView
                android:id="@+id/view_base_info_device_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y50"
                app:stool_label_base_info_text="@string/stool_txt_device_name"
            />
        <net.people.stoolui.modules.base.BaseInfoItemView
                android:id="@+id/view_base_info_device_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y50"
                app:stool_label_base_info_text="@string/stool_txt_device_number"
            />
        <net.people.stoolui.modules.base.BaseInfoItemView
                android:id="@+id/view_base_info_device_os"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y50"
                app:stool_label_base_info_text="@string/stool_txt_device_os"
            />
        <net.people.stoolui.modules.base.BaseInfoItemView
                android:id="@+id/view_base_info_device_os_special"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y50"
                app:stool_label_base_info_text="@string/stool_txt_device_os_special"
            />
        <net.people.stoolui.modules.base.BaseInfoItemView
                android:id="@+id/view_base_info_agent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y50"
                app:stool_label_base_info_text="@string/stool_txt_agent"
            />
        <net.people.stoolui.modules.base.BaseInfoItemView
                android:id="@+id/view_base_info_agent_version"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y50"
                app:stool_label_base_info_text="@string/stool_txt_agent_version"
            />
        <net.people.stoolui.modules.base.BaseInfoItemView
                android:id="@+id/view_base_info_device_imei"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y50"
                app:stool_label_base_info_text="@string/stool_txt_device_imei"
            />
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/stool_y2"
                android:background="@drawable/stool_bg_base_info_dash_line"
                android:layerType="software"
                android:layout_marginLeft="@dimen/stool_x10"
                android:layout_marginRight="@dimen/stool_x10"
                />
    </LinearLayout>
</LinearLayout>
</LinearLayout>
