<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_net_work_detail"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/stool_color_background"
              android:orientation="vertical"
              >

    <include layout="@layout/stool_toolbar_view"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/stool_x5"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/stool_y5"
                    android:layout_marginTop="@dimen/stool_y5"
                    android:background="@drawable/stool_bg_net_detail_title"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/stool_x3"
                    android:paddingTop="@dimen/stool_x3"
                    android:text="@string/stool_request"
                    android:textColor="@color/stool_text_white"
                    android:textSize="@dimen/stool_text18"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_request_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/stool_x8"
                    android:paddingRight="@dimen/stool_x8"
                    android:textColor="@color/stool_text_black"
                    android:textSize="@dimen/stool_x13"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/stool_x5"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_response_head"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/stool_y5"
                        android:layout_marginTop="@dimen/stool_y5"
                        android:background="@drawable/stool_bg_net_detail_title"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/stool_x3"
                        android:paddingTop="@dimen/stool_x3"
                        android:text="@string/stool_response"
                        android:textColor="@color/stool_text_white"
                        android:textSize="@dimen/stool_text18"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/img_fold_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/stool_x15"
                        android:src="@drawable/ic_fold"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/text_request_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/stool_x8"
                    android:paddingRight="@dimen/stool_x8"
                    android:textColor="@color/stool_text_black"
                    android:textSize="@dimen/stool_x13"/>

                <TextView
                    android:id="@+id/text_request_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/stool_x8"
                    android:paddingRight="@dimen/stool_x8"
                    android:textColor="@color/stool_text_black"
                    android:textSize="@dimen/stool_x13"/>

                <TextView
                    android:id="@+id/text_protocol_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/stool_x8"
                    android:paddingRight="@dimen/stool_x8"
                    android:textColor="@color/stool_text_black"
                    android:textSize="@dimen/stool_x13"/>

                <TextView
                    android:id="@+id/text_request_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/stool_x8"
                    android:paddingRight="@dimen/stool_x8"
                    android:textColor="@color/stool_text_black"
                    android:textSize="@dimen/stool_x13"/>

                <TextView
                    android:id="@+id/text_response_content_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/stool_x8"
                    android:paddingRight="@dimen/stool_x8"
                    android:text="@string/stool_response_content_hint_expand"
                    android:textColor="@color/stool_text_black"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/stool_x5"
                    android:paddingLeft="@dimen/stool_x8"
                    android:paddingRight="@dimen/stool_x8">

                    <TextView
                        android:id="@+id/text_response_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="@dimen/stool_x1200"
                        android:background="@color/stool_bg_black_414049"
                        android:text=""
                        android:textColor="@color/stool_text_white"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/stool_x10"/>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_exception"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/stool_y5"
                android:layout_marginLeft="@dimen/stool_x5"
                android:layout_marginRight="@dimen/stool_x5"
                android:layout_marginTop="@dimen/stool_y10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/stool_y5"
                    android:layout_marginTop="@dimen/stool_y5"
                    android:background="@drawable/stool_bg_net_detail_title"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/stool_x3"
                    android:paddingTop="@dimen/stool_x3"
                    android:text="@string/stool_exception"
                    android:textColor="@color/stool_text_white"
                    android:textSize="@dimen/stool_text18"
                    android:textStyle="bold"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/stool_x5"
                    android:paddingLeft="@dimen/stool_x8"
                    android:paddingRight="@dimen/stool_x8">

                    <TextView
                        android:id="@+id/text_err_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="@dimen/stool_x1200"
                        android:background="@color/stool_bg_black_414049"
                        android:padding="@dimen/stool_x5"
                        android:text=""
                        android:textColor="@color/stool_text_white"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/stool_x10"/>
                </HorizontalScrollView>
            </LinearLayout>

            <Button
                android:id="@+id/btn_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/stool_x5"
                android:background="@drawable/stool_button_resend"
                android:text="@string/stool_resend"
                android:textColor="@color/stool_text_white"
                android:textSize="@dimen/stool_text14"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
